# homebrew

./: .gitignore  README.md  clangomp.cpp  clangomp.rb  opencv.rb  opencv_static.rb  opencvstatic.rb  openmprtl.rb  qt5.rb
cuda_opengl/: CMakeLists.txt  CustomFrameBuffer.h  check_error_gl.h  helper_cuda.h  main.cpp
cuda_simple/: CMakeLists.txt  main.cpp  simple.cu
cudaopengl/: CMakeLists.txt  main.cu
fullscreenquad/: fshader.glsl  fullscreenquad.cpp  vshader.glsl
opengl4_qt5/: CMakeLists.txt  main.cpp
opengl_qt5/: main.cpp
qglviewer_qt4/: CMakeLists.txt  main.cpp
qscript_qt5/: ScriptedClass.h  main.cpp  qscript_qt5.pro
